Fixed overflow

--- a/styleEditor.css
+++ b/styleEditor.css
@@ -1,18 +1,11 @@
-/* Experimental border radius */
-/* #root.root {--history-item-border-radius: 4px;}
-#root.root {--bookmarks-border-radius: 4px;}
-#root.root {--tabs-border-radius: 4px;}
-#root.root {--nav-hidden-btn-border-radius: 4px;}
-#root.root {--nav-btn-border-radius: 4px;}
-#root.root {--btn-border-radius: 4px;}
-#root.root {--general-border-radius: 4px;} */
+#root.root {--tabs-border-radius: 6px;}
 
-/* For Windows */
+/* My FF on Windows */
 /* #root.root {--toolbar-bg: #0a011e;}
-#root.root {--frame-bg: #0a011e;} 
+#root.root {--frame-bg: #0a011e;}
 #root.root {--audio-left: 24px;} */
 
-/* For MacOS */
+/* My FF on For MacOS */
 #root.root {--toolbar-bg: #010e19;}
 #root.root {--frame-bg: #010e19;}
 #root.root {--audio-left: 24px;}
