--- a/userContent.scss
+++ b/userContent.scss
@@ -19,6 +19,7 @@
 		top: 0;
 		left: 0;
 		z-index: -1;
+		overflow-x: hidden;
 		background: #000 no-repeat url(img/img3.jpg) center;
 		/* test: background: #000 no-repeat url("moz-page-thumb://thumbnails/?url=file%3A%2F%2F%2FC%3A%2FUsers%2Fjoshu%2Downloads%2Fx.png&revision=380") center; */
 		/* background-image: linear-gradient(135deg, hsl(0, 100%, 50%), hsl(240, 100%, 50%)); */
